# pace2024

./: .gitattributes  .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md  build.sh  experiment.ipynb  generate  lower_bounds.txt  mincrossing-bary  mincrossing-bary-red  mincrossing-medium-red  mincrossing-random-red  note.ipynb
examples/: manual.gr
experiment/: 1000n0-1000n1-80000m.csv  1000n0-1000n1-80000m.gr  230n0-230-n1-30000m.csv  230n0-230n1-30000m.gr  evaluation.ipynb
include/algorithms/: algorithm.h  brute_force.h  genetic_algorithm.h  ilp_algorithm.h  parameterized_algorithm.h  random_search.h  simulated_annealing.h  solution.h
include/graph/: bipartite_graph.h  cutwidth_decorator.h
include/parser/: parser.h  problem_parser.h
include/problems/: exact_problem.h  ocr_problem.h  parameterized_problem.h  problem.h
include/stopping_conditions/: combined_stopping_condition.h  iteration_stopping_condition.h  stopping_condition.h  time_stopping_condition.h
include/utils/: argument.h  random.h  simple_timer.h  utility.h
logs-all-graphs/GA-b/: GA-b.1.out  GA-b.10.out  GA-b.100.out  GA-b.11.out  GA-b.12.out  GA-b.13.out  GA-b.14.out  GA-b.15.out  GA-b.16.out  GA-b.17.out  GA-b.18.out  GA-b.19.out  GA-b.2.out  GA-b.20.out  GA-b.21.out  GA-b.22.out  GA-b.23.out  GA-b.24.out  GA-b.25.out  GA-b.26.out  GA-b.27.out  GA-b.28.out  GA-b.29.out  GA-b.3.out  GA-b.30.out  GA-b.31.out  GA-b.32.out  GA-b.33.out  GA-b.34.out  GA-b.35.out  GA-b.36.out  GA-b.37.out  GA-b.38.out  GA-b.39.out  GA-b.4.out  GA-b.40.out  GA-b.41.out  GA-b.42.out  GA-b.43.out  GA-b.44.out  (+60 more)
logs-all-graphs/GA-m/: GA-m.1.out  GA-m.10.out  GA-m.100.out  GA-m.11.out  GA-m.12.out  GA-m.13.out  GA-m.14.out  GA-m.15.out  GA-m.16.out  GA-m.17.out  GA-m.18.out  GA-m.19.out  GA-m.2.out  GA-m.20.out  GA-m.21.out  GA-m.22.out  GA-m.23.out  GA-m.24.out  GA-m.25.out  GA-m.26.out  GA-m.27.out  GA-m.28.out  GA-m.29.out  GA-m.3.out  GA-m.30.out  GA-m.31.out  GA-m.32.out  GA-m.33.out  GA-m.34.out  GA-m.35.out  GA-m.36.out  GA-m.37.out  GA-m.38.out  GA-m.39.out  GA-m.4.out  GA-m.40.out  GA-m.41.out  GA-m.42.out  GA-m.43.out  GA-m.44.out  (+60 more)
logs-all-graphs/GA-r/: GA-r.1.out  GA-r.10.out  GA-r.100.out  GA-r.11.out  GA-r.12.out  GA-r.13.out  GA-r.14.out  GA-r.15.out  GA-r.16.out  GA-r.17.out  GA-r.18.out  GA-r.19.out  GA-r.2.out  GA-r.20.out  GA-r.21.out  GA-r.22.out  GA-r.23.out  GA-r.24.out  GA-r.25.out  GA-r.26.out  GA-r.27.out  GA-r.28.out  GA-r.29.out  GA-r.3.out  GA-r.30.out  GA-r.31.out  GA-r.32.out  GA-r.33.out  GA-r.34.out  GA-r.35.out  GA-r.36.out  GA-r.37.out  GA-r.38.out  GA-r.39.out  GA-r.4.out  GA-r.40.out  GA-r.41.out  GA-r.42.out  GA-r.43.out  GA-r.44.out  (+60 more)
logs-all-graphs/RS-r/: RS-r.1.out  RS-r.10.out  RS-r.100.out  RS-r.11.out  RS-r.12.out  RS-r.13.out  RS-r.14.out  RS-r.15.out  RS-r.16.out  RS-r.17.out  RS-r.18.out  RS-r.19.out  RS-r.2.out  RS-r.20.out  RS-r.21.out  RS-r.22.out  RS-r.23.out  RS-r.24.out  RS-r.25.out  RS-r.26.out  RS-r.27.out  RS-r.28.out  RS-r.29.out  RS-r.3.out  RS-r.30.out  RS-r.31.out  RS-r.32.out  RS-r.33.out  RS-r.34.out  RS-r.35.out  RS-r.36.out  RS-r.37.out  RS-r.38.out  RS-r.39.out  RS-r.4.out  RS-r.40.out  RS-r.41.out  RS-r.42.out  RS-r.43.out  RS-r.44.out  (+60 more)
logs-all-graphs/SA-b/: SA-b.1.out  SA-b.10.out  SA-b.100.out  SA-b.11.out  SA-b.12.out  SA-b.13.out  SA-b.14.out  SA-b.15.out  SA-b.16.out  SA-b.17.out  SA-b.18.out  SA-b.19.out  SA-b.2.out  SA-b.20.out  SA-b.21.out  SA-b.22.out  SA-b.23.out  SA-b.24.out  SA-b.25.out  SA-b.26.out  SA-b.27.out  SA-b.28.out  SA-b.29.out  SA-b.3.out  SA-b.30.out  SA-b.31.out  SA-b.32.out  SA-b.33.out  SA-b.34.out  SA-b.35.out  SA-b.36.out  SA-b.37.out  SA-b.38.out  SA-b.39.out  SA-b.4.out  SA-b.40.out  SA-b.41.out  SA-b.42.out  SA-b.43.out  SA-b.44.out  (+60 more)
logs-all-graphs/SA-j/: SA-j.1.out  SA-j.10.out  SA-j.100.out  SA-j.11.out  SA-j.12.out  SA-j.13.out  SA-j.14.out  SA-j.15.out  SA-j.16.out  SA-j.17.out  SA-j.18.out  SA-j.19.out  SA-j.2.out  SA-j.20.out  SA-j.21.out  SA-j.22.out  SA-j.23.out  SA-j.24.out  SA-j.25.out  SA-j.26.out  SA-j.27.out  SA-j.28.out  SA-j.29.out  SA-j.3.out  SA-j.30.out  SA-j.31.out  SA-j.32.out  SA-j.33.out  SA-j.34.out  SA-j.35.out  SA-j.36.out  SA-j.37.out  SA-j.38.out  SA-j.39.out  SA-j.4.out  SA-j.40.out  SA-j.41.out  SA-j.42.out  SA-j.43.out  SA-j.44.out  (+60 more)
logs-all-graphs/SA-m/: SA-m.1.out  SA-m.10.out  SA-m.100.out  SA-m.11.out  SA-m.12.out  SA-m.13.out  SA-m.14.out  SA-m.15.out  SA-m.16.out  SA-m.17.out  SA-m.18.out  SA-m.19.out  SA-m.2.out  SA-m.20.out  SA-m.21.out  SA-m.22.out  SA-m.23.out  SA-m.24.out  SA-m.25.out  SA-m.26.out  SA-m.27.out  SA-m.28.out  SA-m.29.out  SA-m.3.out  SA-m.30.out  SA-m.31.out  SA-m.32.out  SA-m.33.out  SA-m.34.out  SA-m.35.out  SA-m.36.out  SA-m.37.out  SA-m.38.out  SA-m.39.out  SA-m.4.out  SA-m.40.out  SA-m.41.out  SA-m.42.out  SA-m.43.out  SA-m.44.out  (+60 more)
logs-all-graphs/SA-r/: SA-r.1.out  SA-r.10.out  SA-r.100.out  SA-r.11.out  SA-r.12.out  SA-r.13.out  SA-r.14.out  SA-r.15.out  SA-r.16.out  SA-r.17.out  SA-r.18.out  SA-r.19.out  SA-r.2.out  SA-r.20.out  SA-r.21.out  SA-r.22.out  SA-r.23.out  SA-r.24.out  SA-r.25.out  SA-r.26.out  SA-r.27.out  SA-r.28.out  SA-r.29.out  SA-r.3.out  SA-r.30.out  SA-r.31.out  SA-r.32.out  SA-r.33.out  SA-r.34.out  SA-r.35.out  SA-r.36.out  SA-r.37.out  SA-r.38.out  SA-r.39.out  SA-r.4.out  SA-r.40.out  SA-r.41.out  SA-r.42.out  SA-r.43.out  SA-r.44.out  (+60 more)
logs-sampled-graphs/GA-b/: GA-b2.1.out  GA-b2.10.out  GA-b2.11.out  GA-b2.12.out  GA-b2.13.out  GA-b2.14.out  GA-b2.15.out  GA-b2.16.out  GA-b2.17.out  GA-b2.18.out  GA-b2.19.out  GA-b2.2.out  GA-b2.20.out  GA-b2.21.out  GA-b2.22.out  GA-b2.23.out  GA-b2.24.out  GA-b2.25.out  GA-b2.26.out  GA-b2.27.out  GA-b2.28.out  GA-b2.29.out  GA-b2.3.out  GA-b2.30.out  GA-b2.4.out  GA-b2.5.out  GA-b2.6.out  GA-b2.7.out  GA-b2.8.out  GA-b2.9.out
logs-sampled-graphs/GA-m/: GA-m2.1.out  GA-m2.10.out  GA-m2.11.out  GA-m2.12.out  (+26 more)
src/: generate.cpp  main.cpp
statistics/: builder.ipynb  generator.ipynb  mincrossing_bary  mincrossing_bary_red  mincrossing_medium  mincrossing_random  note.ipynb  report.ipynb
(+240 files in other folders)
